@@ -40,6 +40,7 @@ date Version 3.00.05
   This was already mostly done. Just needed to enable/disable the appropriate alignment
   buttons for wxBoxSizer and wxStaticBoxSizer.
 * Fixed moving left, right, and into a new wxBoxSizer for spacers.
+* Fixed FS#72 — "When editing a property in the property grid, it is lost when you click away."
 ^ Object tree now saves its state.
 ^ Object tree now also scrolls horizontally when selecting an object.
 ^ Added class name and line to error message for unknown classes when importing xrc.
